# omnis-dashboard-ext

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  omnis-ctl  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  tsconfig.server.json  vite.config.ts
specs/: network-health-dashboard.md
src/: main.ts  server.ts
src/apps/health-dashboard/: mcp-app.html
src/apps/health-dashboard/src/: App.tsx  styles.css
src/data/: clickhouse.ts  neo4j.ts
src/omnis_dashboard/: __init__.py  __main__.py  config.py  server.py
src/omnis_dashboard/data/: __init__.py  clickhouse.py
