[project]
name = "omnis-dashboard-ext"
version = "0.1.0"
description = "MCP ext-app server for network health visualization dashboards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
    "fastmcp>=2.0.0",
    "clickhouse-connect>=0.8.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.34.0",
    "starlette>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
omnis-dashboard = "omnis_dashboard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnis_dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
